--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
     <meta http-equiv=X-UA-Compatible content=IE=edge>
     <meta name=viewport content=width=device-width, initial-scale=1.0>
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <header id="page_header">
+        <h1>LOGO</h1>
+        <img id="menu_icon" src="/images/menu.svg" alt="A menu icon">
+    </header>
+    <main id="page_main">
+        <h1 id="main_title">SOFTWARE DEVELOPMENT</h1>
+        <section id="offerings">
+            <article class="product_article">
+                <img src="/images/phone_one.jpg" alt="">
+                <h3>App Development</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus laboriosam eum doloremque.</p>
+                <span class="article_link">
+                    <a href="#">Learn More </a>
+                    <img class="right_arrow_icon" src="/images/arrow-right.svg" alt="Right Arrow Icon">
+                </span>
+            </article>
+            <article id="middle_article" class="product_article">
+                <img src="/images/app_one.jpg" alt="">
+                <h3>Faster Prototyping</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, deserunt consequuntur nulla.</p>
+                <span class="article_link">
+                    <a href="#">Learn More </a>
+                    <img class="right_arrow_icon" src="/images/arrow-right.svg" alt="Right Arrow Icon">
+                </span>
+            </article>
+            <article class="product_article">
+                <img src="/images/laptop.jpg" alt="">
+                <h3>Web Design</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam minus, ab eos minima maxime possimus.</p>
+                <span class="article_link">
+                    <a href="#">Learn More </a>
+                    <img class="right_arrow_icon" src="/images/arrow-right.svg" alt="Right Arrow Icon">
+                </span>
+            </article>
+        </section>
+    </main>
+    <footer id="page_footer">
+        <p>Copywrite 2023 - Alex Bymoen</p>
+    </footer>
 </body>
 </html>
